--- a/src/sass/dashboard/_profile.scss
+++ b/src/sass/dashboard/_profile.scss
@@ -49,7 +49,7 @@
   flex-direction: column;
   gap: 0.8rem;
   width: 100%;
-  // height: 100%;
+  height: 100%;
   padding: 0.5rem;
 
   .content-title{
@@ -67,10 +67,31 @@
   }
 
   .memberslist {
-    // border: 2px dotted pink;  
+    border: 2px dotted pink;  
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
+    max-height: 100%;
+    overflow-y: auto;
+    
+    &::-webkit-scrollbar {
+      width: 0.3rem;
+      height: 0.3rem;
+    }
+  
+    &::-webkit-scrollbar-track {
+      background: $supplementOne;
+      border-radius: 0.8rem;
+    }
+  
+    &::-webkit-scrollbar-thumb {
+      background: $supplementTwo;
+      border-radius: 0.3rem;
+    }
+  
+    &::-webkit-scrollbar-thumb:hover {
+      background: $accent;
+    }
   }
 
   .member, .owner {
